[project]
name = "repairperson-simulator-app"
version = "0.1.0"
description = "A simulator for the repairperson problem using SimPy."
readme = "README.md"
authors = [{ name = "Andy Maskiell", email = "maskiella@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pydantic>=2.12.5", "simpy>=4.1.1"]

[project.scripts]
repairperson-simulator-app = "repairperson_simulator_app:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "factory-boy>=3.3.3",
    "flake8>=7.3.0",
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "rich>=14.2.0",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--color=yes", "--code-highlight=yes"]
python_files = ["tests/test_*.py", "tests/*_test.py"]
required_plugins = ["pytest-sugar>=1.0.0,<2.0.0", "pytest-xdist>=3.5.0,<4.0.0"]
